@@ -879,3 +879,31 @@ Creating a generic function for 'is.unsorted' from package 'base' in the global 
 > stopifnot(!is.unsorted(a), # 11:16 *is* sorted
 + 	  is.unsorted(rev(a)))
 > 
+> # getSrcref failed when rematchDefinition was used
+> text <- '
++ setClass("MyClass", representation(val = "numeric"))
++ setMethod("plot", signature(x = "MyClass"), 
++     function(x, y, ...) { 
++         # comment
++ 	NULL
++     })
++ setMethod("initialize", signature = "MyClass",
++     function(.Object, value) {
++ 	# comment
++ 	.Object@val <- value
++ 	return(.Object)
++     })
++ '
+> source(textConnection(text), keep.source = TRUE)
+> getSrcref(getMethod("plot", "MyClass"))
+function(x, y, ...) { 
+        # comment
+	NULL
+    }
+> getSrcref(getMethod("initialize", "MyClass"))
+function(.Object, value) {
+	# comment
+	.Object@val <- value
+	return(.Object)
+    }
+> 
