@@ -642,6 +642,10 @@
       \item Plotting symbol \code{pch = 14} had the triangle upside down
       on some devices (typically screen devices). The triangle is
       supposed to be point up.  (Reported by Bill Venables.)
+      
+      \item \code{getSrcref()} did not work on method definitions if
+      \code{rematchDefinition()} had been used.
+      
     }
   }
 }
